Changelog
=========

11.1.dev0 - (unreleased)
------------------------
* Bug fix: Also show document_byline to anonymous users based on site_properties
  [voineali refs #22686]
* Change: Do not merge print.css in order to easily reuse it within epub export
  [voineali refs #22686]
* Feature: Added presentation mode action to export_actions category
  [voineali refs #22686]

11.0 - (2015-02-03)
-------------------
* Feature: Added "export actions" viewlet bellow content title in order to easily
  insert action with high visibility like download as PDF
  [voineali refs #22686]
* Change: cleaned pl_document_related.pt of feeds and pages macros
  since they are no longer found within document_relateditems.pt
  This avoids a relatedItems viewlet error
  [ichimdav refs #22604]

10.9 - (2014-12-23)
-------------------
* Change: added basic style for figures
  [demarant, ichimdav refs #21882]
* Bug fix: Show goto_comments message only when comments are enabled
  [voineali refs demarant]
* Feature: added figureContainer class to presentation_styles.css used by
  the figures title and image div which can be added as an TinyMCE style
  [ichimdav refs #21882]
* Change: removed float clearing for h tags within print.css in order to avoid
  clearing floats when not expected. If clearing is expected a div with
  clearFloats can be added
  [ichimdav refs #22212]
* Bug fix: Fixed frontpage_macros to work with Chameleon
  [voineali refs #21919]
* Bug fix: Fixed main_template to work with Chameleon
  [voineali refs #21919]

10.8 - (2014-11-20)
-------------------
* Bug fix: Patched unlockOnFormUnload.js to stop calling refresh_lock via AJAX
  if the user's auth cookie expired or an error occurred
  [voineali refs #21857]
* Bug fix: harmonise table style on web and print.
  [demarant fixes #21009]
* Change: set font size to 9pt for printing from web and PDF.
  [demarant fixes #21455 and refs #20690]