@@ -1633,6 +1633,10 @@ h3.site-description {
     margin: 0 1em 0 0;
 }
 
+.documentActions {
+  position: relative;
+}
+
 .documentActions ul {
     margin: 0;
     padding: 0;
@@ -2740,10 +2744,11 @@ a.downloading img {
 .downloading-lock::before {
   content: '';
   display: block;
-  width: 50%;
-  height: 20px;
+  width: 100%;
+  height: 100%;
   position: absolute;
   right: 0;
+  z-index: 9999;
 }
 
 #stats td {
