@@ -3,6 +3,10 @@ Changelog
 
 11.1.dev0 - (unreleased)
 ------------------------
+* Upgrade step: Remove portal_skins / custom / ploneCustom.css
+  [voineali refs #22969]
+* Feature: Also avoid multiple clicks within **export actions** viewlet
+  [voineali refs #22969]
 * Bug fix: Also show document_byline to anonymous users based on site_properties
   [voineali refs #22686]
 * Change: Do not merge print.css in order to easily reuse it within epub export
